src/main/default/objects/Case/fields/closedBy__c.field-meta.xml
<CustomField>
    <fullName>closedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClosedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>