src/main/default/objects/Case/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>