src/main/default/objects/Case/fields/Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>