src/main/default/objects/Case/fields/secretKey__c.field-meta.xml
<CustomField>
    <fullName>secretKey__c</fullName>
    <label>SecretKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>